feat: remove database from gateway and create client